--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ type="button">Order Service</button></div>
         <div class="rezumu-container">
     <h3 class="rezume-link">Online Courses</h3>
 <p class="rezume-text">Marketing</p>
-</div></li>
+</div>
+</li>
     </ul>
 </div>
 </section>
